null literal transform